--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ html, body {
 </div>
 
 <script>
-const API_URL = "PASTE_YOUR_APPS_SCRIPT_URL_HERE";
+const API_URL = "https://script.google.com/macros/s/AKfycbyVvwAIyEzFR06_OxcPAs9qAVnlqmr7ubm26s4ARP847Bvpda3gl_yazIURENfATrAb/exec";
 
 let messages = [];
 let index = 0;
@@ -152,3 +152,4 @@ function showMessage() {
 
 </body>
 </html>
+
