--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ html, body {
 </div>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbx_FbPEZIRpQOwFhH5SLC1RfS-uZzIf0mZUi-1ZbXWaAVJNhxWm6lJAORyZbmK2Jp_b/exec";
+const API_URL = "https://script.google.com/macros/s/AKfycbx3_71ajhVyZn6F6SJn4OnJRPK6MZqCPciyrne9VTaVuI_VBShr2wiPxAm3iQyUlnpk/exec
+";
 
 let messages = [];
 let index = 0;
@@ -150,6 +151,7 @@ function showMessage() {
 
 </body>
 </html>
+
 
 
 
