--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             COUNTDOWN_START: 30, // Seconds for countdown
             
             // Filter: Only show approved quotes that aren't empty
-            FILTER_FORMULA: "AND({Approved}=TRUE(),{Kata-kata Jalsah}!='')"
+            FILTER_FORMULA: "AND({Approved}, {Kata-kata Jalsah}!='')"
         };
 
         // ================= APPLICATION STATE =================
@@ -553,3 +553,4 @@
     </script>
 </body>
 </html>
+
